# hdu-framework

./: CMakeLists.txt  test_log.cc
DistributedIR/: CMakeLists.txt
DistributedIR/include/: CMakeLists.txt
DistributedIR/include/DistributedIR/: graph.hpp  ir.hpp  node.hpp
DistributedIR/python/: CMakeLists.txt  graph.cc
cluster/include/: CMakeLists.txt
cluster/include/cluster/: cluster.hpp  common.hpp  server.hpp
common/include/: CMakeLists.txt  error.hpp  result.hpp  util.hpp
cost_graph/include/: CMakeLists.txt  cost_graph_test.cpp
cost_graph/include/cost_graph/: CMakeLists.txt  cost_graph.hpp
cost_graph/include/cost_graph/fusion/: aware_fusion.cc  aware_fusion.h  aware_fusion_test.cpp
policy/include/: CMakeLists.txt
policy/include/policy/: CMakeLists.txt
policy/include/policy/aware/: CMakeLists.txt  cgraph_to_pynx.cc  cgraph_to_pynx.h  cgraph_to_pynx_test.cpp  cgraph_to_pynx_test_yw.cpp  nx_graph.py  pynx_to_cgraph.cc  pynx_to_cgraph.h
policy/include/policy/aware/python/: CMakeLists.txt  Trinity_program_norml.py  c2p_test.cpp  c2p_test.sh  graph_scheduling.py  pp_item.py  programer.py  progressive_fnn.py  progressive_graph.py  progressive_nn.py  progressive_placer.py  py_input.py  simulator.py  test.py  util.py
